Update 'backend-tests-go-zcccndkk' component image to: quay.io/rhtap_qe/backend-tests-go-zcccndkk:4f2601ae43009ae434906bf70dab21e5c688d842@sha256:fb093e3b2e6efb4f93c8dd59713179dd9fb9e026b2ba1f6f6f062fda39b417b2

--- a/components/backend-tests-go-zcccndkk/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-zcccndkk/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-zcccndkk
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-zcccndkk:4f2601ae43009ae434906bf70dab21e5c688d842@sha256:fb093e3b2e6efb4f93c8dd59713179dd9fb9e026b2ba1f6f6f062fda39b417b2
+          name: container-image
